--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
+body {
+  background-color: bisque;
+  font-family: 'Roboto Condensed', sans-serif;
+  margin-top: 20px;
+}
+
+h1 { 
   text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: calc(1.375rem + 1.5vw);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.menu-test {
+    font-size: 30px;
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    transition: transform .2s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.menu-test:hover {
+    transform: scale(1.1);
+    background-color: white;
+    cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/*
+menu {
+  position: absolute;
+  width: 300px;
+  height: 140%;
+  background-color: #333;
+} 
+.menu-link {
   color: white;
+  text-decoration: none;
+  display: block;
+  padding: 25px
+} 
+.menu-link:hover {
+  background-color: #888
 }
 
-.App-link {
-  color: #61dafb;
+.menu-icon {
+  z-index: 2;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  padding: 10px;
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  text-align: center
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu-icon:hover {
+  background-color: azure;
+  color: black;
+  border-radius: 10px;
 }
+*/
